--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
       <h1 class="logo">🎙️ Text2 Podcast</h1>
       <nav>
         <ul>
-          <li><a href="#">Trang chủ</a></li>
-          <li><a href="#">Tập mới</a></li>
-          <li><a href="#">Liên hệ</a></li>
+          <li><a href="https://text2.click">Trang chủ</a></li>
+          <li><a href="https://www.youtube.com/watch?v=8WQpNXkOEXM&list=PLh5sJKYPB7psttPsnUl8mGT06qu-ZQ1GR">Tập mới</a></li>
+          <li><a href="mail.text2.click">Liên hệ</a></li>
         </ul>
       </nav>
     </div>
@@ -128,7 +128,7 @@
 
   <section class="hero">
     <h2>Nghe podcast cùng Text2</h2>
-    <p>Những cuộc trò chuyện thú vị, truyền cảm hứng.</p>
+    <p>Cùng chúng tôi kháp phá thế giới </p>
   </section>
 
   <main class="container video-grid">
