--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
 
   <main class="container video-grid">
     <div class="video-item">
-      <iframe src="https://youtu.be/Er1XTLDh3OM" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/Er1XTLDh3OM" allowfullscreen></iframe>
       <h3>Tập 1: Dùng file âm thanh (Podcast Overview) tính năng Podcast trên Notebook lm có thể thương mại không?</h3>
     </div>
     <div class="video-item">
-      <iframe src="https://youtu.be/8WQpNXkOEXM" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/8WQpNXkOEXM" allowfullscreen></iframe>
       <h3>Tập 2: Đâu Là Ứng Dụng Nhắn Tin Hoàn Hảo: Khi Nhu Cầu Vượt Trên Cuộc Gọi</h3>
     </div>
   </main>
