--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Text2 Podcast</title>
-  <link rel="icon" type="image/png" href="https://i.pinimg.com/736x/10/b5/3d/10b53d42f56094def772153642cd2d95.jpg">
+  <link rel="icon" type="image/png" href="assets/images/logo.png">
 <!-- Google tag (gtag.js) - GA4 -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ABCDEFG123"></script>
 <script>
