--- a/index.html
+++ b/index.html
@@ -322,14 +322,29 @@
 
     <main class="video-grid">
       <div class="video-item">
-        <div class="episode-number">Tập 1</div>
-        <iframe src="https://www.youtube.com/embed/Er1XTLDh3OM" allowfullscreen></iframe>
-        <h3>Dùng file âm thanh (Podcast Overview) tính năng Podcast trên Notebook lm có thể thương mại không?</h3>
+        <div class="episode-number">Tập 5 </div>
+        <iframe src="https://www.youtube.com/embed/FgNgfLBZpFY?si=TYiKMs8ppEd7O3be" allowfullscreen></iframe>
+        <h3>Công nghệ pin có thật sự đang chậm phát triển? |  Text2 Podcast | Tập 5</h3>
+      </div>
+      <div class="video-item">
+        <div class="episode-number">Tập 4</div>
+        <iframe src="https://www.youtube.com/embed/8KQq4DFsA7Y?si=6k6c2akurhRc4aoq" allowfullscreen></iframe>
+        <h3>AI Trở Thành Đồng Đội: Cuộc Cách Mạng Phần Mềm và Doanh Nghiệp Số  |  Text2 Podcast | Tập 4</h3>
+      </div>
+      <div class="video-item">
+        <div class="episode-number">Tập 3</div>
+        <iframe src="https://www.youtube.com/embed/A3-rBflp9fI?si=LJydBdBkWdQYpeqN" allowfullscreen></iframe>
+        <h3>Bảo Vệ và Khôi Phục Tài Khoản Trực Tuyến Của Bạn |  Text2 Podcast | Tập 3</h3>
       </div>
       <div class="video-item">
         <div class="episode-number">Tập 2</div>
         <iframe src="https://www.youtube.com/embed/8WQpNXkOEXM" allowfullscreen></iframe>
         <h3>Đâu Là Ứng Dụng Nhắn Tin Hoàn Hảo: Khi Nhu Cầu Vượt Trên Cuộc Gọi</h3>
+      </div>
+      <div class="video-item">
+        <div class="episode-number">Tập 1</div>
+        <iframe src="https://www.youtube.com/embed/Er1XTLDh3OM" allowfullscreen></iframe>
+        <h3>Dùng file âm thanh (Podcast Overview) tính năng Podcast trên Notebook lm có thể thương mại không?</h3>
       </div>
     </main>
   </div>
